# Prog2

./: 1.c  README.md  sort.c
RGR/: CMakeLists.txt  README.md  main.c  polybius.c  polybius.h  test_polybius.c
RGR/tests/: CMakeLists.txt  test_main.c  test_polybius.c  test_polybius.h
lab3/: file1.txt  file2.txt  git.docx
lab4/: 2.txt
lab5/: 1.c
lab6/: CMakeLists.txt  README.md  main.c  sort.c  sort.h  student.c  student.h
lab7/: 1  1.c  laba7.md
lab8/: CMakeLists.txt  README  ppp.md  sort.c  sort.h  test_sorts.c
labGit/: file2.txt  greeting.txt  sort1.c
